# poaching

./: Cargo.toml  LICENSE  README.md  TODO.md
examples/: players.json
src/: main.rs
src/gui/: css.rs  mod.rs
src/player/: item.rs  mod.rs  pronouns.rs  status.rs
src/scenario/: mod.rs
src/scenario/default_scenarios/: arity_four.rs  arity_one.rs  arity_three.rs  arity_two.rs  mod.rs
src/scenario/start_scenarios/: arity_four.rs  arity_one.rs  arity_three.rs  arity_two.rs  mod.rs
src/simulator/: mod.rs
src/state/: mod.rs
