[package]
name = "poaching"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
rand = "0.9.0"
relm4 = { version = "0.9.1", features = ["relm4-macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracker = "0.2.2"
